--- a/templates/admin/article/_form.html.twig
+++ b/templates/admin/article/_form.html.twig
@@ -38,7 +38,7 @@
             <div class="form-group">
                 <div class="col-sm-5 col-sm-offset-1">
                     <div class="pull-right">
-                        <button class="btn">{{ button_label|default('Save') }}</button>
+                        <button class="btn btn-success">{{ button_label|default('Save') }}</button>
                     </div>
                 </div>
             </div>
