--- a/templates/admin/article/index.html.twig
+++ b/templates/admin/article/index.html.twig
@@ -33,8 +33,8 @@
                 <td>{{ article.createdAt ? article.createdAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ article.userCreated }}</td>
                 <td>
-                    <a href="{{ path('article_show', {'id': article.id}) }}">show</a>
-                    <a href="{{ path('article_edit', {'id': article.id}) }}">edit</a>
+                    <a href="{{ path('article_show', {'id': article.id}) }}" class="btn btn-primary">show</a>
+                    <a href="{{ path('article_edit', {'id': article.id}) }}" class="btn btn-primary">edit</a>
                 </td>
             </tr>
         {% else %}
@@ -45,5 +45,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('article_new') }}">Create new</a>
+    <a href="{{ path('article_new') }}" class="btn btn-primary">Create new</a>
 {% endblock %}
