--- a/templates/admin/user/_form.html.twig
+++ b/templates/admin/user/_form.html.twig
@@ -24,7 +24,7 @@
                 {{ form_row(form.password,{'label' : 'Password', 'attr' : {'placeholder' : 'Password ....','class' : 'form-control'}}) }}
 
         </div>
-        <button class="btn">{{ button_label|default('Save') }}</button>
+        <button class="btn btn-success">{{ button_label|default('Save') }}</button>
         {{ form_end(form) }}
 
     </div>
