--- a/templates/admin/user/edit.html.twig
+++ b/templates/admin/user/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('admin/user/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('user_index') }}">back to list</a>
+    <a href="{{ path('user_index') }}" class="btn btn-primary">back to list</a>
 
     {{ include('admin/user/_delete_form.html.twig') }}
 {% endblock %}
