--- a/templates/admin/user/index.html.twig
+++ b/templates/admin/user/index.html.twig
@@ -23,8 +23,8 @@
                 <td>{{ user.email }}</td>
                 <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
                 <td>
-                    <a href="{{ path('user_show', {'id': user.id}) }}">show</a>
-                    <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
+                    <a href="{{ path('user_show', {'id': user.id}) }}" class="btn btn-primary">show</a>
+                    <a href="{{ path('user_edit', {'id': user.id}) }}" class="btn btn-primary">edit</a>
                 </td>
             </tr>
         {% else %}
@@ -34,6 +34,6 @@
         {% endfor %}
         </tbody>
     </table>
-    <a href="{{ path('user_new') }}">Create new</a>
+    <a href="{{ path('user_new') }}" class="btn btn-primary">Create new</a>
 
 {% endblock %}
