--- a/templates/admin/user/new.html.twig
+++ b/templates/admin/user/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('admin/user/_form.html.twig') }}
 
-    <a href="{{ path('user_index') }}">back to list</a>
+    <a href="{{ path('user_index') }}" class="btn btn-primary">back to list</a>
 {% endblock %}
