--- a/templates/admin/user/show.html.twig
+++ b/templates/admin/user/show.html.twig
@@ -22,8 +22,8 @@
         </tbody>
     </table>
 
-    <a href="{{ path('user_index') }}">back to list</a>
-    <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
+    <a href="{{ path('user_index') }}" class="btn btn-primary">back to list</a>
+    <a href="{{ path('user_edit', {'id': user.id}) }}" class="btn btn-primary">edit</a>
 
 
     {{ include('admin/user/_delete_form.html.twig') }}
