--- a/templates/article/panier.html.twig
+++ b/templates/article/panier.html.twig
@@ -14,6 +14,11 @@
                 {{ message }}
             </div>
         {% endfor %}
+        {% for message in app.session.flashbag.get('ProductFail') %}
+            <div class="alert alert-info">
+                {{ message }}
+            </div>
+        {% endfor %}
         {% if items | length > 0 %}
         <table id="cart" class="table table-hover table-condensed">
             <thead>
