--- a/templates/article/recherche.html.twig
+++ b/templates/article/recherche.html.twig
@@ -8,7 +8,7 @@
 {% block body %}
     <div class="container">
         <div class="bg-light p-3">
-            <h1>Les produits telephoniques</h1>
+            <h1>Resultat de la recherche :</h1>
         </div>
         <div class="row">
 
@@ -32,19 +32,23 @@
 
 
                 <div class="row">
-                    {% if articles | length > 0 %}
-                    {% for article in articles %}
+                    {% for message in app.session.flashbag.get('error') %}
+                        <div class="alert alert-info">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                    {% for resultat in resultat %}
                         <div class="col-lg-4 col-md-6 mb-4">
                             <div class="card h-100">
-                                <a href="{{ path('article', {id : article.id}) }}"><img class="card-img-top" src="/uploads/{{ article.image }}" alt=""></a>
+                                <a href="{{ path('article', {id : resultat.id}) }}"><img class="card-img-top" src="/uploads/{{ resultat.image }}" alt=""></a>
                                 <div class="card-body">
                                     <h4 class="card-title">
-                                        <a href="#">{{ article.nom }}</a>
+                                        <a href="#">{{ resultat.nom }}</a>
                                     </h4>
-                                    <h5>{{ article.prix }} $</h5>
-                                    <p class="card-text">{{ article.description }}</p>
-                                    <a href="{{ path('panier_add', {id : article.id}) }}" class="btn btn-success float-right">
-                                        <i class="fas fa-shopping-cart mr-1"></i>
+                                    <h5>{{ resultat.prix }} $</h5>
+                                    <p class="card-text">{{ resultat.description }}</p>
+                                    <a href="{{ path('panier_add', {id : resultat.id}) }}" class="btn btn-success float-right">
+                                        <i class="fa fa-shopping-cart mr-1"></i>
                                         Ajouter
                                     </a>
                                 </div>
@@ -52,9 +56,7 @@
                         </div>
 
                     {% endfor %}
-                    {% else %}
-                    <p>Aucun produit !</p>
-                    {% endif %}
+
                 </div>
 
 
@@ -69,7 +71,6 @@
 {% endblock %}
 
 {% block javascripts %}
-    {{ parent() }}
     <script src="{{ asset('js/jquery.min.js') }}"></script>
-    <script src="{{ asset('bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+    <script src="{{ asset('js/bootstrap.bundle.min.js') }}"></script>
 {% endblock %}
