--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,9 +29,11 @@
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Categories</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="{{ path('informatique') }}">Informatique</a>
-                            <a class="dropdown-item" href="{{ path('telephonie') }}">Immobilier</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="{{ path('telephonie') }}">Telephonie</a>
+                            <a class="dropdown-item" href="{{ path('tv') }}">TV | Photo & Son</a>
+                            <a class="dropdown-item" href="{{ path('gaming') }}">Gaming</a>
+                            <a class="dropdown-item" href="{{ path('impression') }}">Impression</a>
+                            <a class="dropdown-item" href="{{ path('reseau') }}">Reseaux & Securite</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -39,11 +41,11 @@
                     </li>
                 </ul>
 
-                <form class="form-inline my-2 my-lg-0">
+                <form class="form-inline my-2 my-lg-0" action="{{ path('search_results') }}" method="GET">
                     <div class="input-group input-group-sm">
-                        <input type="text" class="form-control" placeholder="Search...">
+                        <input type="text" name="search" class="form-control" placeholder="Search...">
                         <div class="input-group-append">
-                            <button type="button" class="btn btn-secondary btn-number">
+                            <button type="submit" class="btn btn-secondary btn-number">
                                 <i class="fa fa-search"></i>
                             </button>
                         </div>
@@ -79,7 +81,12 @@
     </div>
     <div class="footer-basic">
         <footer>
-            <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
+            <div class="social">
+                <a href="#"><i class="icon ion-social-instagram"></i></a>
+                <a href="#"><i class="icon ion-social-snapchat"></i></a>
+                <a href="#"><i class="icon ion-social-twitter"></i></a>
+                <a href="#"><i class="icon ion-social-facebook"></i></a>
+            </div>
             <ul class="list-inline">
                 <li class="list-inline-item"><a href="{{ path('home') }}">Home</a></li>
                 <li class="list-inline-item"><a href="#">Services</a></li>
