--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -6,147 +6,61 @@
 {% endblock %}
 
 {% block body %}
-
     <div class="container">
-        {% for message in app.session.flashbag.get('PaymentSuccess') %}
-            <div class="alert alert-info">
-                {{ message }}
-            </div>
-        {% endfor %}
-
+        <div class="bg-light p-3">
+            <h1>Welcome</h1>
+        </div>
         <div class="row">
 
             <div class="col-lg-3">
-
-                <h1 class="my-4">Shop Name</h1>
+                <hr>
+                <h1 class="my-4">Categories</h1>
                 <div class="list-group">
-                    <a href="" class="list-group-item">Informatique</a>
-                    <a href="#" class="list-group-item">Category 2</a>
-                    <a href="#" class="list-group-item">Category 3</a>
+                    <a href="{{ path('informatique') }}" class="list-group-item">Informatique</a>
+                    <a href="{{ path('telephonie') }}" class="list-group-item">Telephonie</a>
+                    <a href="{{ path('tv') }}" class="list-group-item">TV | Photo & Son</a>
+                    <a href="{{ path('gaming') }}" class="list-group-item">Gaming</a>
+                    <a href="{{ path('impression') }}" class="list-group-item">Impression</a>
+                    <a href="{{ path('reseau') }}" class="list-group-item">Reseaux & Securite</a>
                 </div>
 
             </div>
-            <!-- /.col-lg-3 -->
 
-            <div class="col-lg-9">
+            <div class="col-lg-7">
 
-                <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                </div>
-
+                <hr>
                 <div class="row">
+                    {% if articles | length > 0 %}
+                        {% for article in articles %}
+                            <div class="col-lg-4 col-md-6 mb-4">
+                                <div class="card h-100">
+                                    <a href="{{ path('article', {id : article.id}) }}"><img class="card-img-top" src="/uploads/{{ article.image }}" alt=""></a>
+                                    <div class="card-body">
+                                        <h4 class="card-title">
+                                            <a href="#">{{ article.nom }}</a>
+                                        </h4>
+                                        <h5>{{ article.prix }} $</h5>
+                                        <p class="card-text">{{ article.description }}</p>
+                                        <a href="{{ path('panier_add', {id : article.id}) }}" class="btn btn-success float-right">
+                                            <i class="fas fa-shopping-cart mr-1"></i>
+                                            Ajouter
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
 
-                    <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card h-100">
-                            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    <a href="#">Item One</a>
-                                </h4>
-                                <h5>$24.99</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-                            </div>
-                            <div class="card-footer">
-                                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card h-100">
-                            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    <a href="#">Item Two</a>
-                                </h4>
-                                <h5>$24.99</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
-                            </div>
-                            <div class="card-footer">
-                                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card h-100">
-                            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    <a href="#">Item Three</a>
-                                </h4>
-                                <h5>$24.99</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-                            </div>
-                            <div class="card-footer">
-                                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card h-100">
-                            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    <a href="#">Item Four</a>
-                                </h4>
-                                <h5>$24.99</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-                            </div>
-                            <div class="card-footer">
-                                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card h-100">
-                            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    <a href="#">Item Five</a>
-                                </h4>
-                                <h5>$24.99</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
-                            </div>
-                            <div class="card-footer">
-                                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card h-100">
-                            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    <a href="#">Item Six</a>
-                                </h4>
-                                <h5>$24.99</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-                            </div>
-                            <div class="card-footer">
-                                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-                            </div>
-                        </div>
-                    </div>
-
+                        {% endfor %}
+                    {% else %}
+                        <p>Aucun produit !</p>
+                    {% endif %}
                 </div>
-                <!-- /.row -->
+
 
             </div>
-            <!-- /.col-lg-9 -->
 
         </div>
-        <!-- /.row -->
 
     </div>
-    <!-- /.container -->
 
 
 
